css/style.css
/* ==========================================================================
   Base styles: opinionated defaults :)
   ========================================================================== */
html {
  color: #3B3B3B;
  font-size: 1em;
  line-height: 1.4;
  font-family: "Ubuntu";
}
  /*
   * A better looking default horizontal rule
   */

  hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
  }
/*==================================
   Header Styles - Thea
  ==================================*/

    /* company logo positioning */
.company__logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

    /* make nav bar change colour when hovering */
.nav__item a:hover {
  background-color: #F0F08C;
  color: #0057C2;
}

/* nav colours */
#nav__home {
  background-color: #25C389;
}

#nav__portfolio{
  background-color: #FFB901;
}

#nav__blog {
  background-color: #DE6262;
} 

#nav__quo{
  background-color: #19B2DE;
}

#nav__chat {
  background-color: #265787;
}

/* make nav arrow go invis when hover */
.nav__arrow {
  transition: opacity 0.3s ease; 
  padding: 1rem;
 }
    .nav__arrow {
      font-size: 1.3rem;
    }
    .nav__item a:hover .nav__arrow {
      opacity: 0; 
    }

    /* Make transparent banner text */
    .banner__item--top:hover, .banner__item--middle:hover, .banner__item--bottom:hover {
      background: rgba(255, 255, 255, 0.8); 
    } 

    .nav__arrow { 
      font-family: 'Noto Sans';font-size: 1.2em;
      font-weight: 100;
    } 

    .banner__image {
      display:none;
    }

/*==================================
    Body Styles - Alyssa
  ==================================*/

/*====Page Titles====*/
.brand-name {
  color: #1EAFDE;
} 

 h1 {
    font-weight: lighter;
    text-align: center;
    font-size: 34px;
 }
  h2 {
    text-align: center;
    font-weight: lighter;
    margin: auto auto 1rem;
  }
 h4 {
    text-align: center;
    font-weight: lighter;
    color: #A3A3A3;
    font-size: 11px;
    margin: auto auto 2rem;
  }
  .service__icon {
    max-width: 5rem;
    max-height: 5rem;
    margin: 0 auto;
  }
  .service__header {
    font-size: 16px;
  }
  .service__desc {
    font-size: 12px;
    color: #939393;
  }

  /*====News Section====*/
    /*==news container==*/
    .news-item, .news-priority {
      position: relative;
      width: 28rem;
      overflow: hidden;
      margin: 15px auto;
    }
      /*==news date==*/
      .news__date {
        position: absolute;
        background-color: #d16a6a;
        color: white;
        padding: 0.3rem 0.6rem;
        text-align: center;
      }
      .date__day {
        font-size: 20px;
        font-weight: bold;
        display: block;
        margin: auto;
      }
      .date__month {
        font-size: 8px;
        margin: 0 auto;
      }
      /*==news picture==*/
      .news__picture {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
      /*==news title==*/
      .news__info {
        background-color: #19B2DE;
        color: white;
        text-align: left;
        position: absolute;
        bottom: 0;
        left: 0;
        padding: 1px;
        width: 100%;
        height: 15%;
        display: flex;
        flex-direction: column;
      }
      .news__heading, .image__title {
        font-size: 16px;
        font-weight: bold;
        margin: 5px 10px 0;
        color: white;
      }
      .news__subheading, .gallery__type {
        font-size: 11px;
        margin: 0 10px 10px;
        color: white;
      }

      .news__icon {
        position: absolute;
        right: 1rem;
        width: 2rem;
        top: 0.7rem;
        height: 2rem;
        background-color: #007bbf;
        border-radius: 2px;
      }
    /*==Gallery images==*/
      .gallery__image {
        margin: 5px;
        width: 24rem;
        height: 16rem;
        align-self: center;
      }
   .page-clients,
    [hidden] {
      display: none !important;
    }

/*====================
Sandy's footer section
======================*/
footer {
 background-color: #0E2E4E;
 color:#fff;
 display:flex;
 flex-wrap: wrap;
 padding:4px 0;
 justify-content: space-evenly;
 width: 100%;
 height: auto;
 position: absolute;
 left: 0;
 gap:2rem;
}


.flexbox_container{
 display:flex;
 flex-wrap: wrap;
 gap: 2rem;
}


.director__image{
 width: 10.5rem;
 height: 9.5rem;
 flex-shrink: 0;
 border-radius: 100%;
}


.director__caption{
 position: relative;
 top:-1rem;
 width:45rem;
 margin: 2rem;
}


.profile__line{
 position: relative;
 width: 7rem;
 height: 0.3rem;
 background-color: #FFB901;
 left:21.5rem;
 top: -2rem;
}


.reviews__heading{
 color:#19B2DE;
 border-bottom: 1px solid #FFB901;
 display:inline-block;
}


.about__heading{
 color: #FFB901;
 border-bottom: 1px solid #21c183;
}


.instagram__heading{
 color:  #DE6262;
 border-bottom: 1px solid #19B2DE;
 position: relative;
 left:0.5rem;
}


.track__heading{
 border-bottom: 1px solid #19B2DE;
}


.instagram{
 margin-right: 2rem;
 width:auto;
 height:auto;
}
.instagram__content{
 display: flex;
 flex-direction: column;
 flex-wrap: wrap;
 height: 15rem;
}
.instagram__icon{
 margin-left: 0.5rem;
 margin-bottom: 0.5rem;
}


.user{
 color: #1BADE6;
 text-align: justify;
 font-family:'Open Sans', sans-serif;
 font-style: normal;
 font-weight: 700;
}


.track__square{
 display: flex;
 flex-wrap: wrap;
 margin-bottom: 1rem;
}


.track__square--purple{
 background-color:#527CC4;
 width: 2rem;
 height: 2rem;
 border-radius: 5%;
 gap: 0.44rem;
}


.track__square--red{
 background-color:#E46145;
 width: 2rem;
 height: 2rem;
 border-radius: 5%;
 gap: 0.44rem;
}


.track__square--blue{
 background-color:#00B0E2;
 width: 2rem;
 height: 2rem;
 border-radius: 5%;
 gap: 0.44rem;
}


.track__square--pink{
 background-color:#F6679C;
 width: 2rem;
 height: 2rem;
 border-radius: 5%;
 gap: 0.44rem;
}
/* ... */

